<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.paging.LoadState" />

        <import type="android.view.View" />

        <variable
            name="isListEmpty"
            type="java.lang.Boolean" />

        <variable
            name="pagingLoadState"
            type="androidx.paging.CombinedLoadStates" />

        <variable
            name="viewModel"
            type="com.pinkcloud.searchapplication.ui.search.SearchViewModel" />
    </data>

    <com.pinkcloud.searchapplication.ui.search.HideKeyboardConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/surface_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@id/pick_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:imeOptions="actionSearch|flagNoExtractUi"
                android:inputType="textNoSuggestions"
                android:selectAllOnFocus="true"
                android:text="@{viewModel.query}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/pick_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/surface_horizontal_margin"
            android:onClick="@{() -> viewModel.save()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@id/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_input_layout"
            app:selectedDocuments="@{viewModel.selectedDocuments}" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_recycler_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout"
            app:loadState="@{pagingLoadState}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isEmpty="@{isListEmpty}"
                app:loadState="@{pagingLoadState}" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_error_occurred"
            android:visibility="@{pagingLoadState.source.refresh instanceof LoadState.Error ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_result"
            android:visibility="@{isListEmpty ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.pinkcloud.searchapplication.ui.search.HideKeyboardConstraintLayout>
</layout>